; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_setup.c_test_merge_workdir_setup__head_foreach_nonewline.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_setup.c_test_merge_workdir_setup__head_foreach_nonewline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_MERGE_HEAD_FILE = common dso_local global i32 0, align 4
@THEIRS_SIMPLE_OID = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@annotated_commit_foreach_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_workdir_setup__head_foreach_nonewline() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @GIT_MERGE_HEAD_FILE, align 4
  %3 = load i32, i32* @THEIRS_SIMPLE_OID, align 4
  %4 = call i32 @write_file_contents(i32 %2, i32 %3)
  %5 = load i32, i32* @repo, align 4
  %6 = load i32, i32* @annotated_commit_foreach_cb, align 4
  %7 = call i32 @git_repository_mergehead_foreach(i32 %5, i32 %6, i32* null)
  store i32 %7, i32* %1, align 4
  %8 = call i32 @cl_git_fail(i32 %7)
  %9 = load i32, i32* %1, align 4
  %10 = icmp eq i32 %9, -1
  %11 = zext i1 %10 to i32
  %12 = call i32 @cl_assert(i32 %11)
  ret void
}

declare dso_local i32 @write_file_contents(i32, i32) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_repository_mergehead_foreach(i32, i32, i32*) #1

declare dso_local i32 @cl_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
